# ecg_sqi_fusion

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  DATA_AVAILABILITY.md  Instructions.md  LICENSE  README.md  REPRODUCIBILITY.md  mkdocs.yml  pyproject.toml  req.txt  requirements.txt
Report/: README.md
config/: ptbxl_clean_source_exclude_ecg_ids.txt
docs/: ai_use.md  api_reference.md  cli_reference.md  code_architecture.md  data_availability.md  data_v1_fit_report.md  data_v1_gapfill_method.md  e31_wave_mechanism_conformer_comparison.md  e31_wave_mechanism_lite_comparison.md  executive_summary.md  findings.md  index.md  inference.md  limitations.md  methods.md  models.md  quickstart.md  references.md  report.md  reproduction.md  science_background.md  tests_ci.md  troubleshooting.md  wfdb_qrs_kit.md
executive summary/: README.md
report/: README.md  executive_summary.tex  project_report.tex
reports/: factorial_local_quality_benchmark_report.md  ptbxl_strict_clean_filter_audit.md  sqi_12lead_transformer_comparator_report.md  sqi_12lead_transformer_tuning_report.md  transformer_e310_calibration_ensemble_report.md  transformer_e310_e311_snr_warmstart_sweep_report.md  transformer_e310_visual_tuning_report.md  transformer_e311_baseline_vs_local_mask_error_audit.md  transformer_e311_head_combo_grid_report.md  transformer_e311_mainline_grid_report.md  transformer_e311_margin_snr_sweep_report.md  transformer_e311_reproduction_guide.md  transformer_e311_research_ablation_report.md  transformer_e311f_calibration_ensemble_report.md  transformer_e311f_calibration_report.md  transformer_e311f_tuning_report.md  transformer_e36_critical_damage_triplet_report.md  transformer_e39_d1_error_stability_report.md  transformer_e39_label_sample_visualization_report.md  transformer_e39_smooth_damage_triplet_report.md  transformer_e6_local_counterfactual_report.md  transformer_e6b_balanced_local_report.md  transformer_local_aware_tuning_report.md  transformer_tuning_report.md
reproduce/: .gitignore  README.md  check_reproduce.py  expected_outputs.json  run_reproduce.py
slurm/: pretrain_contrastive_transformer.sh  pretrain_transformer.sh  run_ampere.sh  run_e310_e311_snr_warmstart_sweep.sh  run_e310_smooth_morph_mild_snr.sh  run_e311_mainline_data_audit.sh  run_e311_margin_snr_data_audit.sh  run_e311_margin_snr_train_sweep.sh  run_e311_visual_gap.sh  run_e311_visual_gap_tune.sh  tune_e310_visual_best_round1.sh  tune_e311_head_combo_grid.sh  tune_e311_head_combo_round2.sh  tune_e311_mainline_grid.sh  tune_e311_mainline_round2.sh  tune_e311_mainline_round3.sh  tune_e311_mainline_round4.sh  tune_e311f_visual_best_round1.sh  tune_e311f_visual_best_round1_seq.sh  tune_e311f_visual_best_round2.sh  tune_e311f_visual_best_round2_seq.sh  tune_e311f_visual_best_round3.sh  tune_e311f_visual_best_round3_seq.sh  tune_e311f_visual_best_round4.sh  tune_e311f_visual_best_round5.sh  tune_e311f_visual_best_round6.sh  tune_e311f_visual_best_round7.sh  tune_transformer.sh  (+1 more)
(+3578 files in other folders)
