[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-sqi-fusion"
version = "0.1.0"
description = "Research code for ECG signal quality assessment with classical SQI baselines and waveform models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "wfdb",
    "scikit-learn==1.7.2",
    "torch",
    "pyarrow",
    "openpyxl",
    "PyWavelets",
    "tqdm",
    "wfdb-qrs-kit @ https://github.com/Sanssssssssssssssss/wfdb-qrs-kit/releases/download/v0.1.0/wfdb_qrs_kit-0.1.0-py3-none-any.whl#sha256=ae2d9622bffa2774499ffc899ae53f127383fdfd6ab231503c06ee543d18ffdd",
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.30,<1",
]
no-torch = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "wfdb",
    "scikit-learn==1.7.2",
    "pyarrow",
    "openpyxl",
    "PyWavelets",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["src*"]
